// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvorforSpoerVi Skal åpne boksen og matche med innholdet vi legger inn 1`] = `
<div>
  <div
    class="hvorforPanel"
  >
    <button
      aria-expanded="true"
      class="hvorforPanel__toggle"
      data-testid="hvorforPanel_toggle"
      type="button"
    >
      <span>
        Hvorfor spør vi om dette
      </span>
      <span>
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 7l-9 8.571L4.5 17 12 9.857 19.5 17l1.5-1.429L12 7z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="hvorforPanel__innhold"
    >
      <p
        class="navds-body-long"
      >
        <span
          data-testid="test-tekst"
        >
          Diverse informasjon om hvorfor vi spør!
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`HvorforSpoerVi skal rendre hvorfor spør vi som lukket boks 1`] = `
<div>
  <div>
    <button
      aria-expanded="false"
      class="sc-bdfCDU kmcENm"
      data-testid="hvorforPanel_toggle"
      type="button"
    >
      <span>
        <svg
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        hvorforSpoerVi
      </span>
    </button>
  </div>
</div>
`;
